Fix IDE suggestion